name:                hello-haskell
version:             0.1.0.0
synopsis:            Say hello
description:         Say hello
license:             OtherLicense
license-file:        LICENSE
author:              Daniel Vianna
maintainer:          dmlvianna@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Hello
  ghc-options:       -Wall
  hs-source-dirs:    src
  build-depends:     base >= 4.7 && <5
  default-language:  Haskell2010

executable hello-haskell
  ghc-options:       -Wall
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:     base >= 4.7 && <5
                   , hello
  default-language:  Haskell2010